--- a/src/app/pages/coordinador/homologacion-asignaturas/homologacion-asignaturas.component.html
+++ b/src/app/pages/coordinador/homologacion-asignaturas/homologacion-asignaturas.component.html
@@ -1,10 +1,10 @@
 <div class="coordinador-container">
 
   <!-- 📌 Contenedor de solicitudes usando componente genérico -->
-  <app-card-container 
-    title="Solicitudes de Homologación - Coordinador" 
+  <app-card-container
+    title="Solicitudes de Homologación - Coordinador"
     icon="assignment">
-    
+
     <app-request-status-table
       #requestStatusTable
       [solicitudes]="solicitudes"
@@ -17,64 +17,30 @@
   </app-card-container>
 
   <!-- 📌 Documentación de la solicitud seleccionada -->
-  <app-card-container 
+  <app-card-container
     *ngIf="selectedSolicitud"
-    title="Documentación Adjunta" 
+    title="Documentación Adjunta"
     icon="description">
-    
-    <div *ngIf="documentosDelEstudiante.length > 0; else sinDocumentos">
-      <table mat-table [dataSource]="documentosDelEstudiante" class="tabla-documentos">
-        
-        <!-- Nombre del documento -->
-        <ng-container matColumnDef="nombre_documento">
-          <th mat-header-cell *matHeaderCellDef>Nombre de documento</th>
-          <td mat-cell *matCellDef="let documento">{{ documento.nombre }}</td>
-        </ng-container>
 
-        <!-- Fecha de subida -->
-        <ng-container matColumnDef="fecha_subida">
-          <th mat-header-cell *matHeaderCellDef>Fecha en que se subió</th>
-          <td mat-cell *matCellDef="let documento">
-            {{ documento.fecha_documento | date:'shortDate' }}
-          </td>
-        </ng-container>
-
-        <!-- Acciones -->
-        <ng-container matColumnDef="acciones">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
-          <td mat-cell *matCellDef="let documento">
-            <div class="acciones-container">
-              <button mat-icon-button color="primary" (click)="verDocumento(documento)" 
-                      matTooltip="Visualizar documento">
-                <mat-icon>visibility</mat-icon>
-              </button>
-              <button mat-icon-button color="primary" (click)="agregarComentario(documento)" 
-                      matTooltip="Añadir comentario">
-                <mat-icon>comment</mat-icon>
-              </button>
-            </div>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="['nombre_documento','fecha_subida','acciones']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['nombre_documento','fecha_subida','acciones'];"></tr>
-      </table>
-    </div>
-
-    <ng-template #sinDocumentos>
-      <p class="mensaje-vacio">No hay documentos cargados en esta solicitud de homologación.</p>
-    </ng-template>
+    <app-documentation-viewer
+      [documentos]="documentosDelEstudiante"
+      [solicitudId]="selectedSolicitud.id_solicitud"
+      [proceso]="'homologacion'"
+      [servicio]="homologacionService"
+      [puedeAgregarComentarios]="true"
+      (comentarioAgregado)="onComentarioAgregado($event)">
+    </app-documentation-viewer>
 
   </app-card-container>
 
   <!-- 📌 Botones de acción para la solicitud -->
   <div class="botones-acciones" *ngIf="selectedSolicitud">
-    <button mat-raised-button color="primary" 
+    <button mat-raised-button color="primary"
             (click)="aprobarSolicitudSeleccionada()"
             [disabled]="!puedeAprobar()">
       Aprobar Definitivamente
     </button>
-    <button mat-raised-button color="warn" 
+    <button mat-raised-button color="warn"
             (click)="rechazarSolicitudSeleccionada()"
             [disabled]="!puedeRechazar()">
       Rechazar Homologación
