--- a/src/app/pages/coordinador/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/coordinador/paz-salvo/paz-salvo.component.html
@@ -16,43 +16,21 @@
   </mat-card>
 
   <!-- Documentación de la solicitud seleccionada -->
-  <mat-card class="card-section" *ngIf="selectedSolicitud">
-    <mat-card-title>Documentación Adjunta</mat-card-title>
-    <mat-card-content>
-      <div *ngIf="documentosDelEstudiante.length > 0; else sinDocumentos">
-        <table mat-table [dataSource]="documentosDelEstudiante" class="tabla-documentos">
-          <!-- Nombre del archivo -->
-          <ng-container matColumnDef="nombre">
-            <th mat-header-cell *matHeaderCellDef>Nombre del Archivo</th>
-            <td mat-cell *matCellDef="let documento">{{ documento.nombre }}</td>
-          </ng-container>
+  <app-card-container
+    *ngIf="selectedSolicitud"
+    title="Documentación Adjunta"
+    icon="description">
 
+    <app-documentation-viewer
+      [documentos]="documentosDelEstudiante"
+      [solicitudId]="selectedSolicitud.id_solicitud"
+      [proceso]="'paz-salvo'"
+      [servicio]="pazSalvoService"
+      [puedeAgregarComentarios]="true"
+      (comentarioAgregado)="onComentarioAgregado($event)">
+    </app-documentation-viewer>
 
-          <!-- Acciones -->
-          <ng-container matColumnDef="acciones">
-            <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let documento">
-              <div class="acciones-container">
-                <button mat-icon-button color="primary" (click)="verDocumento(documento)" matTooltip="Visualizar documento">
-                  <mat-icon>visibility</mat-icon>
-                </button>
-                <button mat-icon-button color="primary" (click)="agregarComentario(documento)" matTooltip="Añadir comentario">
-                  <mat-icon>comment</mat-icon>
-                </button>
-              </div>
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="['nombre', 'acciones']"></tr>
-          <tr mat-row *matRowDef="let row; columns: ['nombre', 'acciones'];"></tr>
-        </table>
-      </div>
-
-      <ng-template #sinDocumentos>
-        <p class="mensaje-vacio">No hay documentos cargados en esta solicitud de paz y salvo.</p>
-      </ng-template>
-    </mat-card-content>
-  </mat-card>
+  </app-card-container>
 
   <!-- Botones de acción para la solicitud completa -->
   <div class="botones-acciones" *ngIf="selectedSolicitud">
