--- a/src/app/pages/funcionario/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/funcionario/paz-salvo/paz-salvo.component.html
@@ -16,44 +16,21 @@
   </mat-card>
 
   <!-- 📌 Documentación de la solicitud seleccionada -->
-  <mat-card class="card-section" *ngIf="selectedSolicitud">
-    <mat-card-title class="card-title">
-      Documentación Adjunta
-    </mat-card-title>
-    <mat-card-content>
-      <div *ngIf="archivosDelEstudiante.length > 0; else sinArchivos">
-        <table mat-table [dataSource]="archivosDelEstudiante" class="tabla-archivos">
-          <!-- Nombre del archivo -->
-          <ng-container matColumnDef="nombre">
-            <th mat-header-cell *matHeaderCellDef>Nombre del Archivo</th>
-            <td mat-cell *matCellDef="let archivo">{{ archivo.nombre }}</td>
-          </ng-container>
+  <app-card-container
+    *ngIf="selectedSolicitud"
+    title="Documentación Adjunta"
+    icon="description">
 
-          <!-- Acciones -->
-          <ng-container matColumnDef="acciones">
-            <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let archivo">
-              <div class="acciones-container">
-                <button mat-icon-button color="primary" (click)="verArchivo(archivo)" matTooltip="Visualizar">
-                  <mat-icon>visibility</mat-icon>
-                </button>
-                <button mat-icon-button color="accent" (click)="agregarComentario(archivo)" matTooltip="Comentario">
-                  <mat-icon>comment</mat-icon>
-                </button>
-              </div>
-            </td>
-          </ng-container>
+    <app-documentation-viewer
+      [documentos]="archivosDelEstudiante"
+      [solicitudId]="selectedSolicitud.id"
+      [proceso]="'paz-salvo'"
+      [servicio]="pazSalvoService"
+      [puedeAgregarComentarios]="true"
+      (comentarioAgregado)="onComentarioAgregado($event)">
+    </app-documentation-viewer>
 
-          <tr mat-header-row *matHeaderRowDef="['nombre', 'acciones']"></tr>
-          <tr mat-row *matRowDef="let row; columns: ['nombre', 'acciones'];"></tr>
-        </table>
-      </div>
-
-      <ng-template #sinArchivos>
-        <p class="mensaje-vacio">No hay archivos cargados en esta solicitud.</p>
-      </ng-template>
-    </mat-card-content>
-  </mat-card>
+  </app-card-container>
 
   <!-- 📌 Botones de acción para la solicitud -->
   <div class="botones-acciones" *ngIf="selectedSolicitud">
