--- a/src/app/pages/funcionario/reingreso-estudiante/reingreso-estudiante.component.html
+++ b/src/app/pages/funcionario/reingreso-estudiante/reingreso-estudiante.component.html
@@ -22,48 +22,14 @@
     title="Documentación Adjunta"
     icon="description">
 
-    <div *ngIf="documentosDelEstudiante.length > 0; else sinDocumentos">
-      <table mat-table [dataSource]="documentosDelEstudiante" class="tabla-documentos">
-
-        <!-- Nombre del documento -->
-        <ng-container matColumnDef="nombre_documento">
-          <th mat-header-cell *matHeaderCellDef>Nombre de documento</th>
-          <td mat-cell *matCellDef="let documento">{{ documento.nombre }}</td>
-        </ng-container>
-
-        <!-- Fecha de subida -->
-        <ng-container matColumnDef="fecha_subida">
-          <th mat-header-cell *matHeaderCellDef>Fecha en que se subió</th>
-          <td mat-cell *matCellDef="let documento">
-            {{ documento.fecha_documento | date:'shortDate' }}
-          </td>
-        </ng-container>
-
-        <!-- Acciones -->
-        <ng-container matColumnDef="acciones">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
-          <td mat-cell *matCellDef="let documento">
-            <div class="acciones-container">
-              <button mat-icon-button color="primary" (click)="verDocumento(documento)"
-                      matTooltip="Visualizar documento">
-                <mat-icon>visibility</mat-icon>
-              </button>
-              <button mat-icon-button color="accent" (click)="agregarComentario(documento)"
-                      matTooltip="Añadir comentario">
-                <mat-icon>comment</mat-icon>
-              </button>
-            </div>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="['nombre_documento','fecha_subida','acciones']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['nombre_documento','fecha_subida','acciones'];"></tr>
-      </table>
-    </div>
-
-    <ng-template #sinDocumentos>
-      <p class="mensaje-vacio">No hay documentos cargados en esta solicitud de reingreso.</p>
-    </ng-template>
+    <app-documentation-viewer
+      [documentos]="documentosDelEstudiante"
+      [solicitudId]="selectedSolicitud.id_solicitud"
+      [proceso]="'reingreso'"
+      [servicio]="reingresoService"
+      [puedeAgregarComentarios]="true"
+      (comentarioAgregado)="onComentarioAgregado($event)">
+    </app-documentation-viewer>
 
   </app-card-container>
 
